syntax = "proto3";

message RequestMessage{

    enum RequestType{
        // When we are requesting tempurature/humidity data. 
        TEMP_HUM_DATA =0; 
    }
    // What type of request we are trying to get. 
    RequestType reqeust_type = 0;
    // Whether or not we want more data(for debugging and such later)
    bool verbose = 1; 
}